# sad

./: .clang-format  .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md  configure  configure.bat  configure.pl
.github/workflows/: release.yml
doc/: sad.doc  sad.html  sad.md
src/: CMakeLists.txt  HISTORY  binstr.c  binstr.h  dprintf.c  dprintf.h  dumpers.c  dumpers.h  formatters.c  formatters.h  getopt.c  getopt.h  help.c  help.h  jkcommon.h  makeargs.c  makeargs.h  options.c  options.h  platform.h  sad.c  sad.h  sad_version.h.in  util.cpp  utils.c  utils.h  version.h
test/: test.txt
workspaces/: vse-sad.vpj  vse-sad.vpw
